avancement references, passage en velocity/css pour gestion des animations et compatibilité navigateur. Suppression flexbox pour eviter le flickering sur les anims

--- a/web/assets/scss/components/global.scss
+++ b/web/assets/scss/components/global.scss
@@ -404,7 +404,7 @@ a {
 
 
 .back-to-top{
-	display: block;
+	display: none;
 	position: fixed;
 	bottom: 50px;
 	right: 50px;
@@ -423,6 +423,10 @@ a {
 
 	&:hover{
 		background-color: #f26e25;
+	}
+
+	@media #{$large-up} {
+		display: block;
 	}
 }
 .show-back{
