--- a/views/references.html.twig
+++ b/views/references.html.twig
@@ -14,6 +14,7 @@
 		<section class="intro push-top {% if ress.isMobile ==  false %}desktop{% endif %}"></section>
 		<section class="content {% if ress.isMobile ==  false %}desktop{% endif %}">
 			<div id="vamos" class="large ref">
+				<div class="mask"></div>
 				<div class="pictures" data-target='vamos'>
 					<img class="logo-ref svg" src="/assets/img/references/w_logo_vamos.svg" alt="logo Vamos">
 					<img class="maquette-ref" src="/assets/img/references/fiche-contact2.png" alt="maquette vamos">
@@ -24,24 +25,21 @@
 			</div>
 			<div class="right-mask">
 				<div class="infos">
-					<h3>Développement du CRM d'Extia</h3>
-					<h4>Extia</h4>
-					<h5>Réalisation en cours</h5>
+					<h3>Vamos</h3>
+					<h4>Développement du CRM-ERP d'Extia</h4>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. <br>
+						Vamos est le CRM-ERP (Solution logicielle de gestion commerciale et administrative) développé par Kilix pour Extia. Pour ce projet Kilix a appliqué différentes stratégie agile, tels que la gestion par la valeur ou encore le pilotage de projets par les risques. <br>
+						Une équipe de 5 développeurs, 1 Scrum Master et 1 UI/UX Designer travail sur ce projet. Il met en place des technologies qui ont fait leur preuves (Symfony, PostgreSQL) mais aussi des technologies plus récentes (NodeJS, ReactJS). Pour s'adapter au mieux aux besoins du client.<br>
 							<!--
 							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
-							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="Link">Link</span></a>
+							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="Vers le site">Vers le site</span></a>
 						-->
 					</p>
 				</div>
 			</div>
 		</div>
 		<div id="amnesty" class="ref">
+			<div class="mask"></div>
 			<div class="pictures" data-target='amnesty'>
 				<img class="logo-ref svg" src="/assets/img/references/amnesty-logo-black.svg" alt="logo amnesty">
 				<img class="maquette-ref" src="/assets/img/references/amnesty-iphone.png" alt="maquette amnesty">
@@ -52,24 +50,29 @@
 			</div>
 			<div class="right-mask">
 				<div class="infos">
-					<h3>RRefonte de la Home mobile de Amnesty.fr</h3>
-					<h4>Amnesty Internationnal France</h4>
-					<h5>Projet pilote avant refonte complète du site</h5>
+					<h3>Amnesty.fr</h3>
+					<h4>Refonte de la home mobile d'Amnesty.fr</h4>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. <br>
+						Amnesty souhaite refondre sont site <a href="http://amnesty.fr">amnesty.fr</a>. Dans ce cadre, Kilix a réalisé un premier projet consistant à développer la home page du site mobile amnesty.fr.
+						Ce projet avait pour objectif de tester des hypothèse technique et fonctionnelle:
+					</p>
+					<ul>
+						<li>Vérifier l'amélioration du parvours utilisateur et de l'attrait du site</li>
+						<li>Tester une solution technique: <a href="http://prismic.io">prismic.io</a></li>
+						<li>Vérifier la capacité pour Kilix et Amnesty à travailler ensemble dans une logique Agile</li>
+					</ul>
+					<p>
+						Suite à ce projet, Kilix commencera la refonte globale du site amnesty.fr.<br>
 							<!--
 							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
-							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="Link">Link</span></a>
+							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="Vers le site">Vers le site</span></a>
 						-->
 					</p>
 				</div>
 			</div>
 		</div>
 		<div id="horizon" class="large ref">
+			<div class="mask"></div>
 			<div class="pictures" data-target='horizon'>
 				<img class="logo-ref svg" src="/assets/img/references/horizon-logo.svg" alt="Logo COP 21">
 				<img class="maquette-ref" src="/assets/img/references/horizon-home.png" alt="Maquette Horizon">
@@ -80,51 +83,46 @@
 			</div>
 			<div class="right-mask">
 				<div class="infos">
-					<h3>Développement du site Horizon</h3>
-					<h4>Ecole polytechnique de Lausanne</h4>
+					<h3>Horizon</h3>
+					<h4>Développement du site Horizon lors de la COP21 pour l'école polytechnique de Lausanne</h4>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. <br>
+						L'objectif de Horizon est de développer un ensemble de plateforme permetant au public de disposer d'un outils de visualisation des tendances sur les réseaux en temps réel. Dans cette optique, Kilix a développé la première plateforme de présentation des résultats d'analyse des réseaux sociaux pour la conférence Climat COP21.<br>
+						Une approche agile a aussi était utilisée pour ce projet qui été composé de 2 lead développeurs et 1 Scrum Master.<br>
 							<!--
 							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 						-->
-						<a href="http://cop21horizon.com/fr/" target="_blank" class="ref-btn-mobile button enabled"><span data-hover="Link">Link</span></a>
+						<a href="http://cop21horizon.com/fr/" target="_blank" class="ref-btn-mobile button enabled"><span data-hover="Vers le site">Vers le site</span></a>
 					</p>
 				</div>
 			</div>
 		</div>
 		<div id="FFB-public" class="large ref">
+			<div class="mask"></div>
 			<div class="pictures" data-target='FFB-public'>
 				<img class="logo-ref svg" src="/assets/img/references/logo-ffb.svg" alt="logo FFB">
 				<img class="maquette-ref" src="/assets/img/references/ffb-public-home.png" alt="maquette FFB public">
+					<a href="https://www.ffbridge.fr/" target="_blank" class="ref-btn link-ref"><i class="icon-link"></i></a>
 					<!--
-					<a href="#" class="ref-btn link-ref"><i class="icon-link"></i></a>
 					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
 				-->
 			</div>
 			<div class="right-mask">
 				<div class="infos">
-					<h3>Refonte du site public de la FFB</h3>
-					<h4>Fédération Française de Bridge</h4>
-					<h5>Réalisation en cours</h5>
+					<h3>FFB - Site public</h3>
+					<h4>Réfonte du site public de la Fédération Française de Bridge</h4>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. <br>
+						La FFB souhaite refondre son système d'information. Kilix a donc travaillé en collaboration avec la FFB pour réaliser ce chantier d'envergure divisé en 3 parties. La première parties étant la refonte du site grand public.<br>
+						Un des challenge relevé est la réalisation du projet au forfait sans faire de concession sur l'Agilité. Ceci a demandé de former les acteurs de la FFB à la culture agile et de les accompagner totu au long du projet.<br>
 							<!--
 							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
-							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="Link">Link</span></a>
 						-->
+						<a href="https://www.ffbridge.fr/" target="_blank" class="ref-btn-mobile button enabled"><span data-hover="Vers le site">Vers le site</span></a>
 					</p>
 				</div>
 			</div>
 		</div>
 		<div id="FFB" class="large ref">
+			<div class="mask"></div>
 			<div class="pictures" data-target='FFB'>
 				<img class="logo-ref svg" src="/assets/img/references/logo-ffb.svg" alt="logo FFB">
 				<img class="maquette-ref" src="/assets/img/references/ffb-member-fiche.png" alt="maquette FFB">
@@ -135,24 +133,21 @@
 			</div>
 			<div class="right-mask">
 				<div class="infos">
-					<h3>Développement des espaces connectés de la FFB</h3>
-					<h4>Fédération Française de Bridge</h4>
-					<h5>Réalisation en cours</h5>
+					<h3>FFB - Espaces Connectés</h3>
+					<h4>Développement des espaces licencié et de gestion de la Fédération Française de Bridge</h4>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. <br>
+						Ce projet important est aussi composé de 2 parties en plus du site public qui sont, l'espace licencié et l'espace de gestion.<br>
+						Pour cela, Kilix a fait appel a un coach Agile et a utilisé des méthodes agile tels que la gestion par la valeur perçue et l'identification d'un MVP (Minimum Viable Product). Kilix a aussi mis en place au sein de son equipe une culture du Workshop, ateliers de travail ayant pour but de décomplexifier le métier.<br>
 							<!--
 							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
-							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="Link">Link</span></a>
+							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="Vers le site">Vers le site</span></a>
 						-->
 					</p>
 				</div>
 			</div>
 		</div>
 		<div id="michelin" class="large ref">
+			<div class="mask"></div>
 			<div class="pictures" data-target='michelin'>
 				<img class="logo-ref svg" src="/assets/img/references/logo-michelin.svg" alt="Logo Michelin">
 				<img class="maquette-ref" src="/assets/img/references/michelin-home.png" alt="Maquette Michelin">
@@ -163,18 +158,15 @@
 			</div>
 			<div class="right-mask">
 				<div class="infos">
-					<h3>Développement du site de personalisation du guide Michelin</h3>
-					<h4>Michelin</h4>
+					<h3>Michelin</h3>
+					<h4>Développement du site de personalisation du guide Michelin</h4>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur.<br>
+						Michelin voulait développer une application permettant de générer des devis à partir d'une couverture personalisé de leur guide. Pour réaliser ce projet, Kilix a utilisé le canvas pour avoir un rendu en temps réel de la personalisation.<br>
+						De plus le site ce devez d'etre multilingue aussi bien pour le contenu du site que pour les guides à personaliser.<br>
 							<!--
 							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 						-->
-						<a href="http://simgm.michelin.fr/fr/" target="_blank" class="ref-btn-mobile button enabled"><span data-hover="Link">Link</span></a>
+						<a href="http://simgm.michelin.fr/fr/" target="_blank" class="ref-btn-mobile button enabled"><span data-hover="Vers le site">Vers le site</span></a>
 					</p>
 				</div>
 			</div>
