modification des textes de présentation des références

--- a/views/references.html.twig
+++ b/views/references.html.twig
@@ -6,18 +6,18 @@
 		<div class="row">
 			<div class="large-9 columns">
 				<h1>Nos références <span></span><i class="icon-keyboard_arrow_down"> </i></h1>
-				<p>Pour nous, <strong>l’agilité</strong> ne se limite pas à une méthodologie de gestion de projet. C’est <strong>notre philosophie</strong>.
-					Alliée aux principes de <strong>l'amélioration continue</strong> elle nous permet d'apporter <strong>transparence</strong>, <strong>qualité</strong> et <strong>satisfaction à nos clients.</strong></p>
-				</div>
+				<p>Les projets sur lesquels <strong>Kilix</strong> a travaillé sont très variés, aussi bien du coté des clients (Start-up, Grand comptes, Extia, ...)	que du coté des produits réalisés (Web App, Site vitrine, Site éditorial, ...).
+				</p>
 			</div>
-		</header>
-		<section class="intro push-top {% if ress.isMobile ==  false %}desktop{% endif %}"></section>
-		<section class="content {% if ress.isMobile ==  false %}desktop{% endif %}">
-			<div id="vamos" class="large ref">
-				<div class="mask"></div>
-				<div class="pictures" data-target='vamos'>
-					<img class="logo-ref svg" src="/assets/img/references/w_logo_vamos.svg" alt="logo Vamos">
-					<img class="maquette-ref" src="/assets/img/references/fiche-contact2.png" alt="maquette vamos">
+		</div>
+	</header>
+	<section class="intro push-top {% if ress.isMobile ==  false %}desktop{% endif %}"></section>
+	<section class="content {% if ress.isMobile ==  false %}desktop{% endif %}">
+		<div id="vamos" class="large ref">
+			<div class="mask"></div>
+			<div class="pictures" data-target='vamos'>
+				<img class="logo-ref svg" src="/assets/img/references/w_logo_vamos.svg" alt="logo Vamos">
+				<img class="maquette-ref" src="/assets/img/references/fiche-contact2.png" alt="maquette vamos">
 					<!--
 					<a href="#" class="ref-btn link-ref"><i class="icon-link"></i></a>
 					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
@@ -62,7 +62,7 @@
 						<li>Vérifier la capacité pour Kilix et Amnesty à travailler ensemble dans une logique Agile</li>
 					</ul>
 					<p>
-						Suite à ce projet, Kilix commencera la refonte globale du site amnesty.fr.<br>
+						Suite à ce projet, Kilix a commencé la refonte globale du site amnesty.fr.<br>
 							<!--
 							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="Vers le site">Vers le site</span></a>
@@ -86,7 +86,7 @@
 					<h3>Horizon</h3>
 					<h4>Développement du site Horizon lors de la COP21 pour l'école polytechnique de Lausanne</h4>
 					<p>
-						L'objectif de Horizon est de développer un ensemble de plateforme permetant au public de disposer d'un outils de visualisation des tendances sur les réseaux en temps réel. Dans cette optique, Kilix a développé la première plateforme de présentation des résultats d'analyse des réseaux sociaux pour la conférence Climat COP21.<br>
+						L'objectif de Horizon est de développer un ensemble de plateformes permetant au public de disposer d'outils de visualisation des tendances sur les réseaux en temps réel. Dans cette optique, Kilix a développé la première plateforme de présentation des résultats d'analyse des réseaux sociaux pour la conférence Climat COP21.<br>
 						Une approche agile a aussi était utilisée pour ce projet qui été composé de 2 lead développeurs et 1 Scrum Master.<br>
 							<!--
 							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
@@ -115,8 +115,8 @@
 					<h3>FFB - Site public</h3>
 					<h4>Réfonte du site public de la Fédération Française de Bridge</h4>
 					<p>
-						La FFB souhaite refondre son système d'information. Kilix a donc travaillé en collaboration avec la FFB pour réaliser ce chantier d'envergure divisé en 3 parties. La première parties étant la refonte du site grand public.<br>
-						Un des challenge relevé est la réalisation du projet au forfait sans faire de concession sur l'Agilité. Ceci a demandé de former les acteurs de la FFB à la culture agile et de les accompagner totu au long du projet.<br>
+						Dans le cadre de la refonte de son système d'information, Kilix travaille en collaboration avec la FFB pour réaliser ce chantier d'envergure divisé en 3 parties. La première parties étant la refonte du site grand public.<br>
+						Un des challenge relevé est la réalisation du projet au forfait sans faire de concession sur l'Agilité. Ceci a nécessité de former les acteurs de la FFB à la culture agile et de les accompagner tout au long du projet.<br>
 							<!--
 							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 						-->
@@ -169,8 +169,8 @@
 					<h3>Michelin</h3>
 					<h4>Développement du site de personalisation du guide Michelin</h4>
 					<p>
-						Michelin voulait développer une application permettant de générer des devis à partir d'une couverture personalisé de leur guide. Pour réaliser ce projet, Kilix a utilisé le canvas pour avoir un rendu en temps réel de la personalisation.<br>
-						De plus le site ce devez d'etre multilingue aussi bien pour le contenu du site que pour les guides à personaliser.<br>
+						Michelin voulait développer une application permettant de générer des devis à partir d'une couverture personalisée de leur guide. Pour réaliser ce projet, Kilix a utilisé le canvas pour avoir un rendu en temps réel de la personalisation.<br>
+						De plus le site ce devait d'etre multilingue aussi bien pour le contenu du site que pour les guides à personaliser.<br>
 							<!--
 							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 						-->
