update google api call for font to https

--- a/web/assets/scss/app.scss
+++ b/web/assets/scss/app.scss
@@ -9,8 +9,8 @@
 @import "foundation/functions";
 //
 //Fonts
-@import url(http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700);
 @import "icomoon";
 
 //Global app style
